kubernetes/civo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: web-ingress
  namespace: ecom
spec:
  rules:
    - host: 82424f2d-c61e-4956-ab59-9d30f88ba52a.k8s.civo.com
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - 82424f2d-c61e-4956-ab59-9d30f88ba52a.k8s.civo.com
      secretName: mycert
